--- a/FinPlan.Web/Components/Pages/SavingsYearlyDetailsComponent.razor
+++ b/FinPlan.Web/Components/Pages/SavingsYearlyDetailsComponent.razor
@@ -207,7 +207,7 @@
 
                     <td class="column-group first">@year.TraditionalBOYBalance.ToString("C0")</td>
                     <td class="column-group">@year.TraditionalContribution.ToString("C0")</td>
-                    <td class="column-group">@year.Traditionalnterest.ToString("C0")</td>
+                    <td class="column-group">@year.TraditionalInterest.ToString("C0")</td>
                     <td class="column-group last">@year.TraditionalEOYBalance.ToString("C0")</td>
 
                     <td class="column-group first">@year.RothBOYBalance.ToString("C0")</td>
